# simple-ai-agent

./: .gitignore  README.md  example.env  main.py  pyproject.toml  settings.py
scripts/: format  lint
src/: assistants.py  aux_methods.py  prompts.py  strings.py  tools.py
