[project]
name = "simply-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "langgraph-supervisor>=0.0.29",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]
